<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharedPreference_Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Full Name</string>
    <string name="email">Email Id</string>
    <string name="phone">Phone No.</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
       <string name="delete">Delete</string>

</resources>